# Axis

./: .gitignore  AGENTS.md  README.md  package-lock.json
backend/: pyproject.toml
backend/axis/: __init__.py  __main__.py  cli.py  settings.py
backend/axis/ai/: __init__.py  director_prompt.md  scenario_designer.py  scenario_designer_prompt.md
backend/axis/decision/: __init__.py  actions.py  evaluator.py  explain.py
backend/axis/domain/: __init__.py  city.py  coordinates.py  country.py  faction.py  frontline.py  military_assets.py  oblast.py  political.py  territory.py  theater.py
backend/axis/domain/countries/: __init__.py  repository.py  stub.py
backend/axis/factories/: __init__.py  scenario_builder.py  unit_factory.py
backend/axis/intel/: __init__.py  credibility.py  events.py  leader_statements.py  morale.py  morale_factors.py  pipeline.py  pressure.py
backend/axis/intel/sources/: __init__.py  base.py  curated.py  gdelt_live.py  gdelt_snapshot.py
backend/axis/scenarios/: __init__.py  eastern_europe.py
backend/axis/serialization/: __init__.py  snapshot.py
backend/axis/server/: __init__.py  app.py  assistant.py  state.py  world_edits.py
backend/axis/sim/: __init__.py  combat.py  orders.py  political_engine.py
backend/axis/units/: __init__.py  air.py  base.py  domain.py  ground.py  naval.py
backend/tests/: test_builder.py  test_evaluator.py  test_explain.py  test_morale.py  test_political.py  test_snapshot_roundtrip.py
data/: README.md  leader_statements.json  morale_factors.json
docs/: decision-engine.md  intel.md  schema.md
(+119 files in other folders)
