[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axis"
version = "0.1.0"
description = "Axis wargame backend: domain models, scenario builder, snapshot exporter."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "shapely>=2.0",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["axis*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
